tdf#104221: Make up for non-existent FillItemSet

for fill:none option

Change-Id: I12ada9276a613f157976650148f2389126d16f08
Reviewed-on: https://gerrit.libreoffice.org/32050
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
Tested-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 4c5079791f5d985151ebc090c5a07705e76a728e)